# flexplan

./: .gitignore  LICENSE.txt  README.rst  __init__.py  dependency_chain.py  executor.py  noxfile.py  pipegram.py  pyproject.toml  setup.py  types_.py
.github/workflows/: publish.yml
examples/communication/: run.py
examples/hello-world/: run.py  run_in_process.py
flexplan/: __init__.py  errors.py  plan.py  supervisor.py  types.py  workshop.py
flexplan/datastructures/: deferredbox.py  future.py  initializer.py  instancecreator.py  types.py  uniqueid.py
flexplan/messages/: base.py  mail.py  message.py
flexplan/stations/: base.py  local.py  mixins.py  process.py  thread.py
flexplan/utils/: atexit.py  inspect.py  pickle.py
flexplan/workbench/: base.py  loop.py  simple.py
flexplan/workers/: base.py  supervisor.py
flexplan/workshop/: workshop.py
pipegram/: common.py  dependency_chain.py  executor.py  workflow.py
test/: test_weakref.py  test_workflow.py
tests/: test_dependency_chain.py  test_executor.py  test_workflow.py
tests/stations/: test_thread.py
