[project]
name = "flexplan"
description = "Execute multiple tasks in an organized parallel manner"
authors = [{ name = "Leavers" }]
requires-python = ">=3.8"
readme = "README.md"
license = { text = "MIT" }
classifiers = [
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Home Automation",
  "Topic :: Software Development",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Utilities",
]
dependencies = ["flexexecutor", "typing-extensions>=4.8.0"]
dynamic = ["version"]

[project.urls]
homepage = "https://github.com/leavers/flexplan"
# documentation = "URL of documentation"
# changelog = "URL of changelog"

[project.optional-dependencies]
dev = [
  "autoflake",
  "bumpver",
  "isort",
  "mypy",
  "nox",
  "pytest",
  "pytest-asyncio",
  "pytest-cov",
  "pytest-timeout",
  "ruff",
]
pylsp = [
  "python-lsp-server[all]",
  "pylsp-mypy",
  "pylsp-rope",
  "python-lsp-ruff",
  "pyls-isort",
  "python-lsp-black",
]

[build-system]
requires = ["setuptools >= 65.0.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["flexplan*"]
exclude = ["examples*", "tests*"]

[tool.autoflake]
in-place = true
recursive = true
remove-all-unused-imports = true
ignore-init-module-imports = true
remove-duplicate-keys = true
remove-unused-variables = true

[tool.bumpver]
# $ bumpver test '1.2.3' 'MAJOR.MINOR.PATCH[PYTAGNUM]' --major
# New Version: 2.0.0
# $ bumpver test '1.2.3' 'MAJOR.MINOR.PATCH[PYTAGNUM]' --minor
# New Version: 1.3.0
# $ bumpver test '1.2.3' 'MAJOR.MINOR.PATCH[PYTAGNUM]' --patch
# New Version: 1.2.4
# $ bumpver test '1.2.3' 'MAJOR.MINOR.PATCH[PYTAGNUM]' --patch --tag=beta
# New Version: 1.2.4b0
# $ bumpver test '1.2.4b0' 'MAJOR.MINOR.PATCH[PYTAGNUM]' --tag-num
# New Version: 1.2.4b1
current_version = "0.0.1"
version_pattern = "MAJOR.MINOR.PATCH[PYTAGNUM]"
commit_message = "build: bump version {old_version} -> {new_version}"
commit = true
tag = false
push = false

[tool.bumpver.file_patterns]
# use "bumpver update --major | minor | patch | tag=alpha|beta --dry" to test
# "pyproject.toml" = ['version = "{version}"']
"flexplan/__init__.py" = ['__version__ = "{version}"']

[tool.coverage.run]
branch = true
source = ["flexplan"]
parallel = true

[tool.coverage.report]
show_missing = true
exclude_lines = ["pragma: nocover"]

[tool.isort]
# Seems that `ruff format` doesn't support `isort` yet
profile = "black"

[tool.mypy]
check_untyped_defs = true
ignore_missing_imports = true
show_error_codes = true
# use comment "type: ignore" to ignore single line
# use comment "type: ignore[error-code] to ignore single error"

[tool.pytest.ini_options]
asyncio_mode = "strict"

[tool.ruff]
line-length = 88
